Added build for influxdb java plugins

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 
 build-scripts/css_repo/compositeArtifacts.xml
 build-scripts/css_repo/compositeContent.xml
+
+build-scripts/aux_repo/compositeArtifacts.xml
+build-scripts/aux_repo/compositeContent.xml
